optimized removal using deque